# semester-project-vita

./: .gitignore  LICENSE  README.md
CCVPE/: .env  2run.py  2test.py  3run.py  4run.py  5_average_test.py  Qualitative_results-image.ipynb  Qualitative_results.ipynb  Untitled.ipynb  _hcnet.py  adaptive_alpha_train.py  augment_test.py  ccvpe_3_fusion_model.py  ccvpe_3_fusion_train.py  classification_logging.py  compare_dist.py  convert_script.py  convnext_score_fine_patch_score_match_fusion_model.py  convnext_score_patch_score_match_fusion_model.py  daf_patch_test.py  datasets.py  debug_multimae_model.py  debug_multimae_train.py  debug_router_model.py  debug_router_train.py  decoder_deformable_fusion_model.py  decoder_deformable_fusion_train.py  deformable_attention_model.py  deformable_attention_pyramid_model.py  deformable_attention_pyramid_train.py  deformable_attention_skip_model.py  deformable_attention_skip_train.py  deformable_attention_train.py  dist_dual_datasets.py  dual_datasets.py  dual_lightning_train_VIGOR.py  dual_train_VIGOR.py  ensemble_multiple_da_train.py  ensemble_unet_model.py  feat_fusion_models.py  (+65 more)
CCVPE/analysis-notebooks/: Untitled.ipynb  augmentations.ipynb  fix-test.ipynb  general-analysis.ipynb
CCVPE/efficientnet_pytorch/: model.py
CCVPE/hcnet/: dataset.py
CCVPE/maploc/: __init__.py  demo.py  latlong_utils.py
CCVPE/model_utils/: ccvpe.py  ccvpe_modules.py  criterion.py  deformable_fusion.py  fused_image_deformable_fusion.py  fused_image_deformable_fusion_v2.py  fused_image_loss.py  grd_descriptors.py  ground_encoder.py  multimae.py  (+8 more)
(+66 files in other folders)
