[project]
name = "ccvpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.1",
    "ipython>=8.36.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "openmim>=0.3.9",
    "plotly>=6.0.1",
    "rtree>=1.4.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "tomli>=2.2.1",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
